--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,61 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
-repositories {
-    maven {
-        url 'http://jcenter.bintray.com'
+
+buildscript {
+    ext.kotlin_version = '1.1.3-2'
+
+    repositories {
+        maven { url "http://dl.bintray.com/jetbrains/spek" }
+        maven { url 'http://jcenter.bintray.com' }
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+junitPlatform {
+    filters {
+        engines {
+            include 'spek'
+        }
+    }
+}
+
+repositories {
+    maven { url "http://dl.bintray.com/jetbrains/spek" }
+    maven { url 'http://jcenter.bintray.com' }
+    maven { url 'http://timboudreau.com/builds/plugin/repository/everything/'}
+    mavenCentral()
+}
+
 dependencies {
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'io.netty', name: 'netty-all', version: '4.1.12.Final'
 
-    testImplementation 'junit:junit:4.12'
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    testCompile 'io.kotlintest:kotlintest:2.0.3'
+
+    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
+    //unirest libs
+    testCompile 'com.mashape.unirest:unirest-java:1.4.9'
+    testCompile 'org.apache.httpcomponents:httpclient:4.3.6'
+    testCompile 'org.apache.httpcomponents:httpmime:4.3.6'
+    testCompile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
+    testCompile 'org.json:json:20140107'
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
