--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,64 @@
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
-
-
 buildscript {
     ext.kotlin_version = '1.1.3-2'
 
     repositories {
         maven { url 'http://jcenter.bintray.com' }
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
         mavenCentral()
     }
 
     dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'net.researchgate:gradle-release:2.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'java-library'
+apply plugin: 'kotlin'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: "maven-publish"
+
+def projectName = 'geryon'
+
+task fatJar(type: Jar) {
+    archiveName = projectName + '-all.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+bintray {
+    user = System.getProperty('bintrayUser')
+    key = System.getProperty('bintrayKey')
+
+    pkg {
+        repo = 'releases'
+        name = 'geryon'
+        userOrg = 'geryon'
+        licenses = ['MIT']
+
+        version {
+            name = '0.0.1'
+            desc = 'Geryon 0.0.2'
+            released  = new Date()
+            vcsTag = '0.0.2'
+        }
+
+        publications = ['MyPublication']
+    }
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            artifact fatJar
+            groupId 'org.geryon'
+            artifactId 'geryon'
+            version '0.0.2'
+        }
     }
 }
 
