--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: "maven-publish"
+apply plugin: 'net.researchgate.release'
 
 def projectName = 'geryon'
 
