--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,22 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: "maven-publish"
 apply plugin: 'net.researchgate.release'
 
+project(":examples") {
+    apply plugin: 'java-library'
+
+    dependencies {
+        compile project(":core")
+
+        compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
+        compile 'com.mashape.unirest:unirest-java:1.4.9'
+        compile 'org.apache.httpcomponents:httpclient:4.3.6'
+        compile 'org.apache.httpcomponents:httpmime:4.3.6'
+        compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
+        compile 'org.json:json:20140107'
+    }
+}
+
 project(":core") {
     buildscript {
         ext.kotlin_version = '1.1.3-2'
