--- a/build.gradle
+++ b/build.gradle
@@ -22,48 +22,6 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: "maven-publish"
 apply plugin: 'net.researchgate.release'
 
-project(":examples") {
-    buildscript {
-        ext.kotlin_version = '1.1.3-2'
-
-        repositories {
-            maven { url 'http://jcenter.bintray.com' }
-        }
-
-        dependencies {
-            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        }
-    }
-
-    apply plugin: 'java-library'
-    apply plugin: 'kotlin'
-    apply plugin: 'scala'
-
-    repositories {
-        maven { url 'http://jcenter.bintray.com' }
-        maven { url 'http://timboudreau.com/builds/plugin/repository/everything/' }
-        mavenCentral()
-    }
-
-    dependencies {
-        compile project(":core")
-        compile project(":scala")
-
-        compile 'org.scala-lang:scala-library:2.12.2'
-
-        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
-        compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
-
-        compile 'com.mashape.unirest:unirest-java:1.4.9'
-        compile 'org.apache.httpcomponents:httpclient:4.3.6'
-        compile 'org.apache.httpcomponents:httpmime:4.3.6'
-        compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
-        compile 'org.json:json:20140107'
-    }
-}
-
 project(":scala") {
     buildscript {
         repositories {
@@ -133,6 +91,8 @@ project(":scala") {
     }
 
     afterReleaseBuild.dependsOn bintrayUpload
+
+    sourceSets.main.scala.srcDir "src/main/scala"
 
     dependencies {
         compile project(":core")
