--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'geryon'
 
-include 'core', 'scala', 'examples', 'scala-examples'
+include 'core', 'scala', 'examples', 'scala-examples', 'kotlin-examples'
